# antlr4-config

./: README.md
linux/: CMakeLists.txt  config.sh
win/: CMakeLists.txt  build.bat  config.bat
